TUIOdroid for Android Changelog

v1.0 0x.04.2011
---------------
* fix network setup 
* remove debug messages

v0.9 02.04.2011
---------------
* add TUIO verbosity option 
* improved help dialog
* updated JavaOSC library
* limit to 40 FPS

v0.8 31.03.2011
---------------
* option for screen orientation 
* improved settings dialog
* new application icon

v0.7 29.03.2011
---------------
* TUIO 1.1 source message
* correct incremental Session ID
* implement Velocity and Acceleration attributes
* UI tweaks & application Icon
* android 2.0 target

v0.6 27.03.2011
---------------
* initial source release